======================================================================================================================
  Current AllOverIt Inter-Dependencies

  [1]  AllOverIt                               (v1.17.4) - None
  [2]  AllOverIt.Validation                    (v1.0.0)  - requires [1] v1.17.0
  [3]  AllOverIt.Aws.Cdk.AppSync               (v0.15.0) - requires [1] v1.17.3
  [4]  AllOverIt.Evaluator                     (v2.1.0)  - requires [1] v1.11.0
  [5]  AllOverIt.GenericHost                   (v1.2.0)  - requires [1] v1.17.0
  [6]  AllOverIt.Fixture                       (v1.6.0)  - None
  [7]  AllOverIt.Fixture.FakeItEasy            (v1.4.0)  - requires [6] v1.6.0
  [8]  AllOverIt.Serialization.Abstractions    (v1.0.0)  - None
  [9]  AllOverIt.Serialization.NewtonsoftJson  (v1.0.0)  - [8] v1.0.0
  [10] AllOverIt.Serialization.SystemTextJson  (v1.0.0)  - [8] v1.0.0
  [11] AllOverIt.Aws.AppSync.Client            (v0.3.0)  - requires [1] v1.17.3, [8] v1.0.0

======================================================================================================================



01 Oct 2021
======================================================================================================================
AllOverIt - v1.17.4
  * Fixed a self-referencing exception when serializing an object with objects shared across collection items.



21 Sep 2021
======================================================================================================================
AllOverIt.Aws.AppSync.Client - v0.3.0
  * Added support for queries and mutations.
  * Some type renaming and reorganised file structure
  
AllOverIt.Aws.Cdk.AppSync - v0.15.0
  * Updated IConnection available options

  
  
15 Sep 2021
======================================================================================================================
AllOverIt.Aws.AppSync.Client - v0.2.0
  * Some error handling improvements.
  * Updates to track current subscription status.



13 Sep 2021