@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
         <LangVersion>latest</LangVersion>
-        <Version>1.17.4</Version>
+        <Version>1.18.0</Version>
         <Authors>Malcolm Smith</Authors>
         <Company></Company>
         <Copyright>Copyright © 2015</Copyright>
