@@ -1,7 +1,7 @@
 ======================================================================================================================
   Current AllOverIt Inter-Dependencies
 
-  [1]  AllOverIt                               (v1.17.4) - None
+  [1]  AllOverIt                               (v1.18.0) - None
   [2]  AllOverIt.Validation                    (v1.0.0)  - requires [1] v1.17.0
   [3]  AllOverIt.Aws.Cdk.AppSync               (v0.15.0) - requires [1] v1.17.3
   [4]  AllOverIt.Evaluator                     (v2.1.0)  - requires [1] v1.11.0
@@ -14,6 +14,12 @@
   [11] AllOverIt.Aws.AppSync.Client            (v0.3.0)  - requires [1] v1.17.3, [8] v1.0.0
 
 ======================================================================================================================
+
+
+
+05 Oct 2021
+======================================================================================================================
+  * Added cancellation support to ForEachAsTaskAsync() and ForEachAsParallelAsync()
 
 
 
